# swarm_sim

./: .gitignore  README.md  run_sim.sh
docs/screenshots/initial_dev_phase/: 04.webm  5_first_pytorch_control.webm  Screencast from 2026-01-23 17-13-36.webm  Screencast from 2026-01-31 06-00-04.webm  Screencast from 2026-01-31 14-01-42.webm  Screencast from 2026-01-31 14-21-32.webm  Screencast from 2026-01-31 14-49-25.webm
proto/: swarm.proto
results/: PPO_DL_Controller.webm  Screencast from 2026-01-31 14-01-18.webm  Screencast from 2026-01-31 14-52-40.webm  Screencast from 2026-01-31 14-54-54.webm  Screencast from 2026-01-31 15-11-05.webm  Screencast from 2026-02-23 09-09-15.webm  Screencast from 2026-02-23 09-12-46.webm  Screencast from 2026-02-23 09-54-26.webm  Screencast from 2026-02-23 09-56-08.webm  Screencast from 2026-02-23 10-03-43.webm
sim_server/: Cargo.toml  build.rs
sim_server/configs/: sim.yaml
sim_server/src/: config.rs  grpc.rs  learning.rs  logging.rs  main.rs  observations.rs  physics.rs  utils.rs  world.rs
swarms/controller_cpp/: CMakeLists.txt
swarms/controller_cpp/include/swarm/: controller.h
swarms/controller_cpp/src/: controller.cpp  main.cpp
swarms/controller_cpp/src/proto/: swarm.grpc.pb.h  swarm.pb.cc  swarm.pb.h
swarms/swarm_cpp/: CMakeLists.txt
swarms/swarm_cpp/include/swarm/: swarm.h
swarms/swarm_cpp/policies/: policy_scripted_10000_cpu.pt  policy_scripted_300.pt  policy_scripted_3000_cpu.pt  policy_scripted_50.pt  policy_scripted_9000_cpu.pt
swarms/swarm_cpp/src/: main.cpp  swarm.cpp
swarms/swarm_py/: policy.py  swarm_env.py  swarm_pb2.py  swarm_pb2_grpc.py  train.py
tools/: bin_reader.py  bin_to_csv.py  plot_swarm.py  schema.py
