[package]
name = "sim_server"
version = "0.3.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
rand = "0.9.2"
pprof = { version = "0.13", features = ["flamegraph"] }

[build-dependencies]
tonic-build = "0.11"
